<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignupActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/signupImage"
            android:layout_width="@dimen/dimen_200dp"
            android:layout_height="@dimen/dimen_200dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/img2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.549"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearance="@style/circleImageviewOne"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/signupText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textSize="@dimen/dimen_30sp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/dimen_30dp"
            android:layout_marginEnd="@dimen/dimen_30dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            app:layout_constraintTop_toBottomOf="@+id/signupImage"
            android:textColor="@color/purple_1"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signupFullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_30dp"
            android:layout_marginEnd="@dimen/dimen_30dp"
            app:boxStrokeColor="@color/purple_1"
            app:hintTextColor="@color/purple_1"
            android:textColorHint="@color/black"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/signupText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            android:layout_marginTop="@dimen/dimen_20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/fullname">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signupMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_30dp"
            android:layout_marginEnd="@dimen/dimen_30dp"
            app:boxStrokeColor="@color/purple_1"
            app:hintTextColor="@color/purple_1"
            android:textColorHint="@color/black"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/signupFullname"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            android:layout_marginTop="@dimen/dimen_20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/mobile">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signupEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_30dp"
            android:layout_marginEnd="@dimen/dimen_30dp"
            app:boxStrokeColor="@color/purple_1"
            app:hintTextColor="@color/purple_1"
            android:textColorHint="@color/black"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/signupMobile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            android:layout_marginTop="@dimen/dimen_20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/email">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/signupGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textSize="@dimen/dimen_17sp"
            android:layout_marginStart="@dimen/dimen_32dp"
            android:layout_marginEnd="@dimen/dimen_30dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signupEmail"
            android:textColor="@color/black"/>

        <RadioGroup
            android:id="@+id/signupRadiogroup"
            android:layout_marginStart="@dimen/dimen_31dp"
            android:layout_marginEnd="@dimen/dimen_31dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/signupGender">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioMale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:button="@drawable/custom_radio_selector"
                android:text="@string/male" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioFemale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@drawable/custom_radio_selector"
                android:text="@string/female" />
        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signupAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_30dp"
            android:layout_marginEnd="@dimen/dimen_30dp"
            app:boxStrokeColor="@color/purple_1"
            app:hintTextColor="@color/purple_1"
            android:textColorHint="@color/black"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/signupRadiogroup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            android:layout_marginTop="@dimen/dimen_20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/enter_address">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="4" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signupInsertdata"
            android:background="@drawable/bg_button_rounded_corner_10"
            app:backgroundTint="@color/purple_1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50dp"
            app:layout_constraintTop_toBottomOf="@id/signupAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/dimen_50dp"
            android:layout_marginStart="@dimen/dimen_30dp"
            android:layout_marginEnd="@dimen/dimen_30dp"
            android:text="@string/insert_user_data"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/viewUserdata"
            android:background="@drawable/bg_button_rounded_corner_10"
            app:backgroundTint="@color/purple_1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50dp"
            app:layout_constraintTop_toBottomOf="@id/signupInsertdata"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_marginStart="@dimen/dimen_30dp"
            android:layout_marginEnd="@dimen/dimen_30dp"
            android:text="@string/view_user_data"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>