<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.UpdatedataActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/updateFullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_30dp"
            android:layout_marginEnd="@dimen/dimen_30dp"
            app:boxStrokeColor="@color/purple_1"
            app:hintTextColor="@color/purple_1"
            android:textColorHint="@color/black"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            android:layout_marginTop="@dimen/dimen_50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/updateMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_30dp"
            android:layout_marginEnd="@dimen/dimen_30dp"
            app:boxStrokeColor="@color/purple_1"
            app:hintTextColor="@color/purple_1"
            android:textColorHint="@color/black"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/updateFullname"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            android:layout_marginTop="@dimen/dimen_20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/mobile_num">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/updateEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_30dp"
            android:layout_marginEnd="@dimen/dimen_30dp"
            app:boxStrokeColor="@color/purple_1"
            app:hintTextColor="@color/purple_1"
            android:textColorHint="@color/black"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/updateMobile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            android:layout_marginTop="@dimen/dimen_20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/email_add">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/updateGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textSize="@dimen/dimen_17sp"
            android:layout_marginStart="@dimen/dimen_32dp"
            android:layout_marginEnd="@dimen/dimen_30dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/updateEmail"
            android:textColor="@color/black"/>

        <RadioGroup
            android:id="@+id/updateRadiogroup"
            android:layout_marginStart="@dimen/dimen_31dp"
            android:layout_marginEnd="@dimen/dimen_31dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/updateGender">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/updateRadioMale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:button="@drawable/custom_radio_selector"
                android:text="@string/male" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/updateRadioFemale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@drawable/custom_radio_selector"
                android:text="@string/female" />
        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/updateAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_30dp"
            android:layout_marginEnd="@dimen/dimen_30dp"
            app:boxStrokeColor="@color/purple_1"
            app:hintTextColor="@color/purple_1"
            android:textColorHint="@color/black"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/updateRadiogroup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            android:layout_marginTop="@dimen/dimen_20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/address">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="4" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/updatedata"
            android:background="@drawable/bg_button_rounded_corner_10"
            app:backgroundTint="@color/purple_1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50dp"
            app:layout_constraintTop_toBottomOf="@id/updateAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/dimen_50dp"
            android:layout_marginStart="@dimen/dimen_30dp"
            android:layout_marginEnd="@dimen/dimen_30dp"
            android:text="@string/update_data"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>